# mlir_tutorial

./: .gitignore  CMakeLists.txt  README.md  log.mlir
ex2-build/: ex2-build.cpp
my_mlir/: AI_COMPILER_INTERVIEW_NOTES.md  CMakeLists.txt  INTERVIEW_GUIDE.md  README.md  USAGE.md  cuda_driver_runtime_smoke.cpp  cuda_generated_ptx_smoke.cpp  cuda_runtime_artifacts_smoke.cpp  cuda_runtime_bundle_smoke.cpp  cuda_runtime_smoke.cpp  extract_cuda_ptx.py  extract_runtime_json.py  main.cpp  northstar_cuda_runner.cpp  run_cuda_generated_ptx_smoke.sh  run_cuda_on_5060.sh  run_cuda_pipeline.sh  run_cuda_runtime_bundle_smoke.sh  runtime_smoke.cpp
my_mlir/include/: CMakeLists.txt
my_mlir/include/Conversion/: CMakeLists.txt  Passes.h  Passes.td
my_mlir/include/Conversion/NorthStarToLinalg/: NorthStarToLinalg.h
my_mlir/include/Dialect/NorthStar/IR/: CMakeLists.txt  NorthStarAttrs.h  NorthStarAttrs.td  NorthStarConstraints.td  NorthStarDialect.h  NorthStarDialect.td  NorthStarEunms.h  NorthStarEunms.td  NorthStarOps.h  NorthStarOps.td  NorthStarTypes.h  NorthStarTypes.td
my_mlir/include/Dialect/NorthStar/Transforms/: CMakeLists.txt  Passes.h  Passes.td
my_mlir/include/Interfaces/: CMakeLists.txt  DistributeParallelismInterfaces.h  DistributeParallelismInterfaces.td  FusionRegionInterfaces.h  FusionRegionInterfaces.td
my_mlir/include/Utils/: CUDADriverBackend.h  CUDARuntime.h  CUDARuntimeAPI.h  CUDARuntimeArtifacts.h  File.h  H350Runtime.h  H350RuntimeAPI.h  Key.h
my_mlir/src/: CMakeLists.txt
my_mlir/src/Conversion/NorthStarToLinalg/: CMakeLists.txt  GenerateRuntimeJsonPass.cpp  LowerDeviceKernelsToGPUPass.cpp  LowerDeviceKernelsToLoopsPass.cpp  LowerHostToNPUCallsPass.cpp  LowerNPUCallsToRuntimePass.cpp  LowerRuntimeStubsToCUDACallsPass.cpp  LowerRuntimeStubsToH350CallsPass.cpp  MaterializeRuntimeStubsPass.cpp  NorthStarToLinalg.cpp  NorthStarToLinalgPass.cpp  OutlineDeviceKernelsPass.cpp  SerializeNPUKernelsPass.cpp
my_mlir/src/Dialect/NorthStar/IR/: CMakeLists.txt  NorthStarAttrs.cpp  NorthStarDialect.cpp  NorthStarOps.cpp  NorthStarTypes.cpp
my_mlir/src/Dialect/NorthStar/Transforms/: ApplyDistributeTransform.cpp  CMakeLists.txt  DeviceRegionFusion.cpp  MarkDistributeParallelParameters.cpp
my_mlir/src/Interfaces/: CMakeLists.txt  DistributeParallelismInterfaces.cpp  FusionRegionInterfaces.cpp
my_mlir/src/NS-opt/: CMakeLists.txt  NS-opt.cpp
my_mlir/src/Utils/: CMakeLists.txt  CUDADriverBackend.cpp  CUDARuntime.cpp  CUDARuntimeAPI.cpp  CUDARuntimeArtifacts.cpp  H350Runtime.cpp  H350RuntimeAPI.cpp
my_mlir/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
my_mlir/test/Conversion/: device_kernel_to_loops.mlir  device_kernels_gpu_to_nvvm.mlir  device_kernels_to_gpu.mlir  device_kernels_to_gpu_loops.mlir  generate_runtime_json.mlir  generate_runtime_json_cuda.mlir  host_to_npu_call.mlir  materialize_runtime_stubs.mlir  north_star_to_linalg.mlir  npu_call_to_runtime.mlir  npu_runtime_mock_execute.mlir  runtime_stubs_to_cuda_calls.mlir  runtime_stubs_to_h350_calls.mlir  serialize_npu_kernels.mlir
my_mlir/test/NorthStar/: apply-distribute-transform.mlir
my_mlir/test/Runtime/: cuda_runtime_artifacts_smoke.py  cuda_runtime_smoke.py  h350_runtime_smoke.py
